@@ -1576,6 +1576,7 @@ bool
 GEOSHasZ(Geometry *g)
 {
 	//char msg[256];
+	if ( g->isEmpty() ) return false;
 	double az = g->getCoordinate()->z;
 	//sprintf(msg, "ZCoord: %g", az);
 	//ERROR_MESSAGE(msg);
