@@ -101,7 +101,11 @@ PolygonizeGraph::addEdge(const LineString *line)
 	 * This would catch invalid linestrings
 	 * (containing duplicated points only)
 	 */
-	if ( linePts->getSize() < 2 ) return;
+	if ( linePts->getSize() < 2 )
+	{
+		delete linePts;
+		return;
+	}
 
 	const Coordinate& startPt=linePts->getAt(0);
 	const Coordinate& endPt=linePts->getAt(linePts->getSize()-1);
@@ -460,6 +464,10 @@ PolygonizeGraph::deleteDangles()
 
 /**********************************************************************
  * $Log$
+ * Revision 1.12  2005/12/09 11:36:38  strk
+ * Small leak plugged in CAPI::GEOSHasZ() and in
+ * invalid input to PolygonizeGraph (again)
+ *
  * Revision 1.11  2005/12/09 10:03:46  strk
  * Fixed a bug making PolygonizeGraph choking on invalid LineStrings.
  * Minor optimizations in Polygonizer loops.
